fixed uneven project cards

--- a/src/Main.css
+++ b/src/Main.css
@@ -112,14 +112,6 @@ html, body {
   flex-direction: column;
 }
 
-.project {
-  margin-bottom: 20px;
-}
-
-.project:last-child {
-  margin-bottom: 0;
-}
-
 .button-group {
   display: flex;
   flex-direction: row;
@@ -180,6 +172,12 @@ form {
   }
   50% {
     border-color: #6187cc;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .project {
+    margin-bottom: 20px;
   }
 }
 
